--- a/suanfonson.cabal
+++ b/suanfonson.cabal
@@ -39,4 +39,4 @@ Library
 
 source-repository head
   type:             git
-  location:         git://github.com/Jeancasoto/suanfonson
+  location:         git://github.com/jeancasoto/suanfonson.git
